fix: correct visibility icons and increase width of input fields

--- a/frontend/src/app/components/leftSide.module.css
+++ b/frontend/src/app/components/leftSide.module.css
@@ -20,22 +20,8 @@
   gap: 5px;
 }
 
-/* .background {
-  position: absolute;
-  top: 0;
-  left: 0;
-  height: 100%;
-  width: 50%;
-  background-color: #bbd567;
-  z-index: 1;
-} */
-
 .svg-container {
   position: relative;
-  /* top: 249px;
-  left: 200px;
-  width: 320px;
-  height: 417.34px; */
   z-index: 2;
 }
 .positionedText {
