--- a/frontend/src/app/components/loginButton.module.css
+++ b/frontend/src/app/components/loginButton.module.css
@@ -2,7 +2,7 @@
 
 .loginButton {
   display: flex;
-  width: 288px;
+  width: 100%;
   height: 48px;
   flex-direction: column;
   justify-content: center;
