--- a/frontend/src/app/components/textBox.module.css
+++ b/frontend/src/app/components/textBox.module.css
@@ -2,10 +2,13 @@
 
 .textBox {
   display: flex;
-  width: 288px;
   flex-direction: column;
   align-items: flex-start;
   gap: 2px;
+}
+
+.textBox form {
+  width: 100%;
 }
 
 .label {
@@ -16,7 +19,6 @@
   font-style: normal;
   font-weight: 400;
   line-height: 24px; /* 150% */
-  width: 288px;
 }
 
 .inputContainer {
@@ -35,6 +37,7 @@
 
 .input {
   display: flex;
+  width: 100%;
   padding: 6px 12px;
   align-items: flex-start;
   gap: 10px;
@@ -43,7 +46,6 @@
   border: 1px solid var(--Neutral-Gray2, #d9d9d9);
   flex: 1 0 0;
   background-color: transparent;
-  width: 288px;
   color: var(--Secondary-Neutral-Gray6, #484848);
 
   /* Body/Medium (Reg) */
